--- a/src/main/webapp/css/post.css
+++ b/src/main/webapp/css/post.css
@@ -1,8 +1,8 @@
-.img-keep-ratio {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
+img {
+    max-width: 100% !important;
+    max-height: 100% !important;
+    width: auto !important;
+    height: auto !important;
 }
 
 .photo-description {
@@ -16,4 +16,58 @@
 
 .font-size-4x {
     font-size: 4rem;
+}
+
+/* 追加した写真のカード */
+[id^=photo-card-].card {
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    padding-left: .25rem;
+    padding-right: .25rem;
+}
+/* 追加した写真のカードの中身 */
+[id^=photo-card-].card>.row {
+    height: 10rem;
+}
+/* 追加した写真の画像枠（カードの左カラム） */
+[id^=photo-card-].card>.row .col:nth-child(1) {
+    display: flex;
+    height: 100%;
+}
+/* 写真 */
+[id^=photo-card-].card>.row .col:nth-child(1)>img {
+    margin: auto;
+}
+/* 追加した写真の詳細枠（カードの右カラム） */
+[id^=photo-card-].card>.row .col:nth-child(2) {
+    /* .my-auto */
+    margin-top: auto;
+    margin-bottom: auto;
+}
+/* 写真の説明文 */
+[id^=photo-card-].card>.row .col:nth-child(2) p:nth-child(1) {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;	/* 3行分 */
+    line-height: 1.5;
+    height: 4.5rem;	/* = (number of visible lines) * (line-height) * 1rem */
+    overflow: hidden;
+    margin-top: 0;
+    margin-bottom: .25rem;
+}
+/* 写真の撮影時刻 */
+[id^=photo-card-].card>.row .col:nth-child(2) p:nth-child(2) {
+    margin-top: .25rem;
+    margin-bottom: .25rem;
+}
+/* 写真の撮影場所 */
+[id^=photo-card-].card>.row .col:nth-child(2) p:nth-child(3) {
+    margin-top: .25rem;
+    margin-bottom: 0;
+}
+/* 写真の詳細表示カラムのアイコン（カレンダーと地図のピン） */
+[id^=photo-card-].card>.row .col:nth-child(2) p .fas {
+    display: inline-block;
+    text-align: center;
+    width: 1rem;
 }
