--- a/src/main/webapp/css/post.css
+++ b/src/main/webapp/css/post.css
@@ -46,23 +46,20 @@ img {
 }
 /* 写真の説明文 */
 [id^=photo-card-].card>.row .col:nth-child(2) p:nth-child(1) {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;	/* 3行分 */
     line-height: 1.5;
     height: 4.5rem;	/* = (number of visible lines) * (line-height) * 1rem */
-    overflow: hidden;
+    overflow-y: auto;
     margin-top: 0;
-    margin-bottom: .25rem;
+    margin-bottom: .5rem;
 }
 /* 写真の撮影時刻 */
 [id^=photo-card-].card>.row .col:nth-child(2) p:nth-child(2) {
-    margin-top: .25rem;
-    margin-bottom: .25rem;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
 }
 /* 写真の撮影場所 */
 [id^=photo-card-].card>.row .col:nth-child(2) p:nth-child(3) {
-    margin-top: .25rem;
+    margin-top: .5rem;
     margin-bottom: 0;
 }
 /* 写真の詳細表示カラムのアイコン（カレンダーと地図のピン） */
